# JenkinsTest

./: CMakeLists.txt  ReadMe.md  TestDLL.vcxproj  cuda_leaning.pptx  simplemath.cpp  test.py  test_dll.py
include/: simplemath.h
sources/: simplemath.cpp
tests/: test_dll.py
